--- a/index.html
+++ b/index.html
@@ -1,18 +1,46 @@
-<!doctype html>
+
+<!DOCTYPE html>
+<meta charset="UTF-8">
 <html>
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="mystyles.css">
-<title>Test mobile page</title>
+<title>Home Page</title>
+<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="mobile.css">
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+<script src="main.js"></script>
 </head>
-
 <body>
-<header><h1>My Test Page</h1></header>
-<div id="container">
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dignissim venenatis consequat. Praesent quis odio a neque venenatis ornare. Nam vel sem sed magna porttitor ultrices. Nunc nec turpis vitae lacus efficitur pulvinar in id nibh. Praesent sed mi vel ipsum faucibus ultrices iaculis eget dui. Praesent ultricies velit vel vestibulum convallis. Praesent accumsan luctus sem, at consectetur erat convallis pretium. Nunc pulvinar nec nibh a mollis. Donec a metus in sapien sollicitudin fermentum vitae eu eros.</p>
-<p>Nulla pellentesque nunc vel lectus semper, tincidunt blandit magna maximus. Nam vel imperdiet lacus. Donec et euismod massa, eu suscipit ipsum. Pellentesque lobortis nulla vitae scelerisque elementum. Curabitur at tempor nisl, vel imperdiet orci. Fusce commodo justo nibh, vel convallis purus blandit vitae. Sed a arcu eget mauris rutrum bibendum.</p>
+<main>
+
+<header>
+<div class="centermenu">
+<div id="menubtn" onclick="Showmenu()"></div>
+			<nav>
+						<ul id="DesktopM">
+			  <li id="logoM"><img src="logo.jpg" alt="company logo"></li>
+  <li class="menuitems"><a href="Index.html">Home</a></li>
+  <li class="menuitems"><a href="Blog.html">Blog</a></li>
+  <li class="menuitems"><a href="Emag.html">E-magazine</a></li>
+  <li class="menuitems"><a href="Storelocator.html">Our Stores</a></li>
+</ul>
+			<ul id="Mmenu">
+			  <li id="logoM"><img src="logo.jpg" alt="company logo"></li>
+  <li class="menuitems"><a href="Index.html">Home</a></li>
+  <li class="menuitems"><a href="Blog.html">Blog</a></li>
+  <li class="menuitems"><a href="Emag.html">E-magazine</a></li>
+  <li class="menuitems"><a href="Storelocator.html">Our Stores</a></li>
+</ul>
+</nav>
+
+
 </div>
-<footer>Footer From Me</footer>
+</header>
+<img id="Honda15"src="2015-Honda-CBR300R2_5X.jpg" srcset="2015-Honda-CBR300R2_1X.jpg 1x, 2015-Honda-CBR300R2_2X.jpg 2x, 2015-Honda-CBR300R2_3X.jpg 3x">
+<div id="Phototext">
+<h1>2015 Honda CBR300R</h1>
+<p>The CBR300R has something very special – a shot of DNA and style drawn straight from the incredible CBR1000RR Fireblade. Its power delivery is razor sharp and as you chase down those corners you'll feel directly connected. Standard-fit Anti-Lock Braking System (ABS) adds extra braking confidence as you ride.</p>
+<p>While one might be tempted to think the Honda CBR300R is just for beginners, girls, or seasoned riders who are backing it down, it’s quite a bit more than that. The fact is, the CBR 300 is a great commuter bike, it’s a blast in the canyons, and it easily works as a no-stress around-town or errand bike. Let’s see why this diminutive bike works so well. This Motorcycle is avaible in our Newcastle Branch</p>
+</div>
+</main>
 </body>
 </html>
