--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
 <head>
 <title>Home Page</title>
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/AzulTop/progapi2/e0ad91d2/styles.css">
 <link rel="stylesheet" type="text/css" href="mobile.css">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <script src="main.js"></script>
