--- a/Index.html
+++ b/Index.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <title>Home Page</title>
-<link rel="stylesheet" type="text/css" href="style.css">
-<link rel="stylesheet" type="text/css" href="mobile.css">
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+<link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/AzulTop/progapi2/master/styles.css">
+<link rel="stylesheet" type="text/css" href="https://rawgit.com/AzulTop/progapi2/master/mobile.css">
+<link rel="shortcut icon" href="https://rawgit.com/AzulTop/progapi2/master/favicon.ico" type="image/x-icon" />
 <script src="main.js"></script>
 </head>
 <body>
@@ -16,25 +16,25 @@
 <div id="menubtn" onclick="Showmenu()"></div>
 			<nav>
 						<ul id="DesktopM">
-			  <li class="logoM"><img src="logo.jpg" alt="company logo"></li>
-  <li class="menuitems"><a href="Index.html">Home</a></li>
-  <li class="menuitems"><a href="Blog.html">Blog</a></li>
-  <li class="menuitems"><a href="Emag.html">E-magazine</a></li>
-  <li class="menuitems"><a href="Storelocator.html">Our Stores</a></li>
+			  <li class="logoM"><img src="https://rawgit.com/AzulTop/progapi2/master/logo.jpg" alt="company logo"></li>
+  <li class="menuitems"><a href="https://rawgit.com/AzulTop/progapi2/master/Index.html">Home</a></li>
+  <li class="menuitems"><a href="https://rawgit.com/AzulTop/progapi2/master/Blog.html">Blog</a></li>
+  <li class="menuitems"><a href="https://rawgit.com/AzulTop/progapi2/master/Emag.html">E-magazine</a></li>
+  <li class="menuitems"><a href="https://rawgit.com/AzulTop/progapi2/master/Storelocator.html">Our Stores</a></li>
 </ul>
 			<ul id="Mmenu">
 			  <li class="logoM"><img src="logo.jpg" alt="company logo"></li>
-  <li class="menuitems"><a href="Index.html">Home</a></li>
-  <li class="menuitems"><a href="Blog.html">Blog</a></li>
-  <li class="menuitems"><a href="Emag.html">E-magazine</a></li>
-  <li class="menuitems"><a href="Storelocator.html">Our Stores</a></li>
+  <li class="menuitems"><a href="https://rawgit.com/AzulTop/progapi2/master/Index.html">Home</a></li>
+  <li class="menuitems"><a href="https://rawgit.com/AzulTop/progapi2/master/Blog.html">Blog</a></li>
+  <li class="menuitems"><a href="https://rawgit.com/AzulTop/progapi2/master/Emag.html">E-magazine</a></li>
+  <li class="menuitems"><a href="https://rawgit.com/AzulTop/progapi2/master/Storelocator.html">Our Stores</a></li>
 </ul>
 </nav>
 
 
 </div>
 </header>
-<img id="Honda15" src="2015-Honda-CBR300R2_5X.jpg" alt="This is the Honda CBR300R2 " srcset="2015-Honda-CBR300R2_1X.jpg 1x, 2015-Honda-CBR300R2_2X.jpg 2x, 2015-Honda-CBR300R2_3X.jpg 3x">
+<img id="Honda15" src="https://rawgit.com/AzulTop/progapi2/master/2015-Honda-CBR300R2_1X.jpg" alt="This is the Honda CBR300R2 " srcset="https://rawgit.com/AzulTop/progapi2/master/2015-Honda-CBR300R2_1X.jpg 1x, https://rawgit.com/AzulTop/progapi2/master/2015-Honda-CBR300R2_2X.jpg 2x, https://rawgit.com/AzulTop/progapi2/master/2015-Honda-CBR300R2_3X.jpg 3x">
 <div id="Phototext">
 <h1>2015 Honda CBR300R</h1>
 <p>The CBR300R has something very special – a shot of DNA and style drawn straight from the incredible CBR1000RR Fireblade. Its power delivery is razor sharp and as you chase down those corners you'll feel directly connected. Standard-fit Anti-Lock Braking System (ABS) adds extra braking confidence as you ride.</p>
