--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/AzulTop/progapi2/master/styles.css">
 <link rel="stylesheet" type="text/css" href="https://rawgit.com/AzulTop/progapi2/master/mobile.css">
 <link rel="shortcut icon" href="https://rawgit.com/AzulTop/progapi2/master/favicon.ico" type="image/x-icon" />
-<script src="main.js"></script>
+<script src="https://rawgit.com/AzulTop/progapi2/master/main.js"></script>
 </head>
 <body>
 <main>
