--- a/Blog.html
+++ b/Blog.html
@@ -3,10 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <title>Home Page</title>
-<link rel="stylesheet" type="text/css" href="style.css">
-<link rel="stylesheet" type="text/css" href="mobile.css">
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-<script src="main.js"></script>
+<link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/AzulTop/progapi2/master/styles.css">
+<link rel="stylesheet" type="text/css" href="https://rawgit.com/AzulTop/progapi2/master/mobile.css">
+<link rel="shortcut icon" href="https://rawgit.com/AzulTop/progapi2/master/favicon.ico" type="image/x-icon" />
+<script src="https://rawgit.com/AzulTop/progapi2/master/main.js"></script>
 </head>
 <body>
 <main>
@@ -15,18 +15,18 @@
 <div id="menubtn" onclick="Showmenu()"></div>
 			<nav>
 						<ul id="DesktopM">
-			  <li class="logoM"><img src="logo.jpg" alt="company logo"></li>
-  <li class="menuitems"><a href="Index.html">Home</a></li>
-  <li class="menuitems"><a href="Blog.html">Blog</a></li>
-  <li class="menuitems"><a href="Emag.html">E-magazine</a></li>
-  <li class="menuitems"><a href="Storelocator.html">Our Stores</a></li>
+			  <li class="logoM"><img src="https://rawgit.com/AzulTop/progapi2/master/logo.jpg" alt="company logo"></li>
+  <li class="menuitems"><a href="https://rawgit.com/AzulTop/progapi2/master/Index.html">Home</a></li>
+  <li class="menuitems"><a href="https://rawgit.com/AzulTop/progapi2/master/Blog.html">Blog</a></li>
+  <li class="menuitems"><a href="https://rawgit.com/AzulTop/progapi2/master/Emag.html">E-magazine</a></li>
+  <li class="menuitems"><a href="https://rawgit.com/AzulTop/progapi2/master/Storelocator.html">Our Stores</a></li>
 </ul>
 			<ul id="Mmenu">
 			  <li class="logoM"><img src="logo.jpg" alt="company logo"></li>
-  <li class="menuitems"><a href="Index.html">Home</a></li>
-  <li class="menuitems"><a href="Blog.html">Blog</a></li>
-  <li class="menuitems"><a href="Emag.html">E-magazine</a></li>
-  <li class="menuitems"><a href="Storelocator.html">Our Stores</a></li>
+  <li class="menuitems"><a href="https://rawgit.com/AzulTop/progapi2/master/Index.html">Home</a></li>
+  <li class="menuitems"><a href="https://rawgit.com/AzulTop/progapi2/master/Blog.html">Blog</a></li>
+  <li class="menuitems"><a href="https://rawgit.com/AzulTop/progapi2/master/Emag.html">E-magazine</a></li>
+  <li class="menuitems"><a href="https://rawgit.com/AzulTop/progapi2/master/Storelocator.html">Our Stores</a></li>
 </ul>
 </nav>
 
@@ -36,13 +36,13 @@
 <h1 class="MH1Text">These are our current best sellers</h1>
 <p class="PMText">Click on any of the following tiles learn more about the each motorcycle</p>
 <div id="TilePosition">
-<div class="box"><div class="MotoImg"><img  class="MotoPic" src="2013_LEXMOTO_ARROW_125cc.jpg" alt="2013_LEXMOTO_ARROW_125cc Motorcycle " height="105" width="150"></div><div class="Mtext"><p>Description</p><p class="productInfo">
+<div class="box"><div class="MotoImg"><img  class="MotoPic" src="https://rawgit.com/AzulTop/progapi2/master/2013_LEXMOTO_ARROW_125cc.jpg" alt="2013_LEXMOTO_ARROW_125cc Motorcycle " height="105" width="150"></div><div class="Mtext"><p>Description</p><p class="productInfo">
 Condition:
 Used, Year:	2013, Mileage:	16,445	Manufacturer:	LEXMOTO, Engine Size:	124cc,	Colour:	Black,
 Drive Type:	Chain,	MOT Expiry Date:	03/2018,
-V5 Registration Document:	Present <a href="Lexmoto2013.html">More Information</a></p></div>
+V5 Registration Document:	Present <a href="https://rawgit.com/AzulTop/progapi2/master/Lexmoto2013.html">More Information</a></p></div>
 </div>
-<div class="box"><div class="MotoImg"><img class="MotoPic" src="Sinnis_Retrostar_250cc_Motorcycle.jpg" alt="Sinnis_Retrostar_250cc_Motorcycle " height="105" width="150"></div><div class="Mtext"><p>Description</p><p class="productInfo">
+<div class="box"><div class="MotoImg"><img class="MotoPic" src="https://rawgit.com/AzulTop/progapi2/master/Sinnis_Retrostar_250cc_Motorcycle.jpg" alt="Sinnis_Retrostar_250cc_Motorcycle " height="105" width="150"></div><div class="Mtext"><p>Description</p><p class="productInfo">
 Condition:	
 New,
 Year:	2016,
@@ -52,7 +52,7 @@ Model:	RETROSTAR 250,	Drive Type:	Chain,
 Warranty:	24,	Engine Size:	250</p></div>
 </div>
 
-<div class="box"><div class="MotoImg"><img class="MotoPic" src="Kawasaki_Ninja_250cc.jpg" alt="Kawasaki Ninja 250cc Motorcycle " height="105" width="150"></div><div class="Mtext"><p>Description</p><p class="productInfo">
+<div class="box"><div class="MotoImg"><img class="MotoPic" src="https://rawgit.com/AzulTop/progapi2/master/Kawasaki_Ninja_250cc.jpg" alt="Kawasaki Ninja 250cc Motorcycle " height="105" width="150"></div><div class="Mtext"><p>Description</p><p class="productInfo">
 Condition	
 Used,
 Year:	2008,
@@ -64,7 +64,7 @@ Previous owners (excl. current):	1,	Fuel:	Petrol,
 V5 Registration Document:	Present</p></div>
 </div>
 
-<div class="box"><div class="MotoImg"><img class="MotoPic" src="Lexmoto_Valencia_50_50cc_scooter.jpg" alt="Lexmoto_Valencia_50_50cc_Scooter " height="105" width="150"></div><div class="Mtext"><p>Description</p><p class="productInfo">
+<div class="box"><div class="MotoImg"><img class="MotoPic" src="https://rawgit.com/AzulTop/progapi2/master/Lexmoto_Valencia_50_50cc_scooter.jpg" alt="Lexmoto_Valencia_50_50cc_Scooter " height="105" width="150"></div><div class="Mtext"><p>Description</p><p class="productInfo">
 Condition:	
 New,
 Year:	2016,
@@ -75,7 +75,7 @@ Warranty:	12,	Colour:	Other,
 Previous owners:	0,	Engine Size:	50</p></div>
 </div>
 
-<div class="box"><div class="MotoImg"><img class="MotoPic" src="SUZUKI_GP_100_2_STROKE_1982%20.jpg" alt="Suzuki GP100 1982 Motorcycle " height="105" width="150"></div><div class="Mtext"><p>Description</p><p class="productInfo">
+<div class="box"><div class="MotoImg"><img class="MotoPic" src="https://rawgit.com/AzulTop/progapi2/master/SUZUKI_GP_100_2_STROKE_1982%20.jpg" alt="Suzuki GP100 1982 Motorcycle " height="105" width="150"></div><div class="Mtext"><p>Description</p><p class="productInfo">
 Condition: Used,
 Year:	1982,
 Fuel:	Petrol,	Manufacturer:	Suzuki,
@@ -85,7 +85,7 @@ Previous owners (excl. current):	1,	Date of 1st Registration:	16/04/1982,
 V5 Registration Document:	Present</p></div>
 </div>
 
-<div class="box"><div class="MotoImg"><img class="MotoPic" src="RARE_CLASSIC_HONDA_CB400.jpg" alt="Honda CB400 Motorcycle " height="105" width="150"></div><div class="Mtext"><p>Description</p><p class="productInfo">
+<div class="box"><div class="MotoImg"><img class="MotoPic" src="https://rawgit.com/AzulTop/progapi2/master/RARE_CLASSIC_HONDA_CB400.jpg" alt="Honda CB400 Motorcycle " height="105" width="150"></div><div class="Mtext"><p>Description</p><p class="productInfo">
 Condition:	Used,Year:	1977,
 Mileage:	40,000	Engine Size:	408,
 Manufacturer:	Honda,	Gears:	Six-speed manual,
@@ -94,7 +94,7 @@ Type:	Super Sport,	Drive Type:	Chain,
 MOT Expiry Date:	04/2018,Date of 1st Registration:	14/02/1977</p></div>
 </div>
 
-<div class="box"><div class="MotoImg"><img class="MotoPic" src="Yamaha_YZF_600_R_Thundercat_1998_Red.jpg" alt="Yamaha_YZF_600_R_Thundercat_1998_Red Classic Motorcycle " height="105" width="150"></div><div class="Mtext"><p>Description</p><p class="productInfo">
+<div class="box"><div class="MotoImg"><img class="MotoPic" src="https://rawgit.com/AzulTop/progapi2/master/Yamaha_YZF_600_R_Thundercat_1998_Red.jpg" alt="Yamaha_YZF_600_R_Thundercat_1998_Red Classic Motorcycle " height="105" width="150"></div><div class="Mtext"><p>Description</p><p class="productInfo">
 Condition:	Used,
 Year:	1998,
 Mileage:	36,800, Manufacturer:	YAMAHA, Model:	YZF 600 R,	
@@ -104,7 +104,7 @@ Engine Size:	599 cc
 </p></div>
 </div>
 
-<div class="box"><div class="MotoImg"><img class="MotoPic" src="Yamaha_YZF_R125_2014.jpg" alt="Yamaha_YZF_R125_2014 Motorcycle " height="105" width="150"></div><div class="Mtext"><p>Description</p><p class="productInfo">
+<div class="box"><div class="MotoImg"><img class="MotoPic" src="https://rawgit.com/AzulTop/progapi2/master/Yamaha_YZF_R125_2014.jpg" alt="Yamaha_YZF_R125_2014 Motorcycle " height="105" width="150"></div><div class="Mtext"><p>Description</p><p class="productInfo">
 Condition:	Used, Year:	2014,	Mileage:	15,986,
 Engine Size:	124cc,	Manufacturer:	Yamaha,
 Gears:	Six-speed manua,	Model:	YZF R125,
@@ -112,7 +112,7 @@ Start Type:	Electric start,Drive Type:	Chain,	Date of 1st Registration:	11/01/20
 </p></div>
 </div>
 
-<div class="box"><div class="MotoImg"><img class="MotoPic" src="Lexmoto_Diablo_125cc_Scooter.jpg" alt="Lexmoto_Diablo_125cc_Scooter " height="105" width="150"></div><div class="Mtext"><p>Description</p><p class="productInfo">
+<div class="box"><div class="MotoImg"><img class="MotoPic" src="https://rawgit.com/AzulTop/progapi2/master/Lexmoto_Diablo_125cc_Scooter.jpg" alt="Lexmoto_Diablo_125cc_Scooter " height="105" width="150"></div><div class="Mtext"><p>Description</p><p class="productInfo">
 Condition:	New, Year:	2017,
 Mileage:	0	Power:	0,
 Manufacturer:	Lexmoto	Gears:	Automatic,
@@ -123,7 +123,7 @@ Previous owners excl. current:	0,	Engine Size:	125cc,
 </p></div>
 </div>
 
-<div class="box"><div class="MotoImg"><img class="MotoPic" src="Aprilia_SPORT_CITY_CUBE.jpg" alt="Aprillia Sport City Cube Bike " height="105" width="150"></div><div class="Mtext"><p>Description</p><p class="productInfo">
+<div class="box"><div class="MotoImg"><img class="MotoPic" src="https://rawgit.com/AzulTop/progapi2/master/Aprilia_SPORT_CITY_CUBE.jpg" alt="Aprillia Sport City Cube Bike " height="105" width="150"></div><div class="Mtext"><p>Description</p><p class="productInfo">
 Condition:	
 Used,
 Year:	2012,
