--- a/Lexmoto2013.html
+++ b/Lexmoto2013.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Lexmoto 2013</title>
-<link rel="stylesheet" type="text/css" href="style.css">
-<link rel="stylesheet" type="text/css" href="mobile.css">
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-<script src="main.js"></script>
+<title>Home Page</title>
+<link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/AzulTop/progapi2/master/styles.css">
+<link rel="stylesheet" type="text/css" href="https://rawgit.com/AzulTop/progapi2/master/mobile.css">
+<link rel="shortcut icon" href="https://rawgit.com/AzulTop/progapi2/master/favicon.ico" type="image/x-icon" />
+<script src="https://rawgit.com/AzulTop/progapi2/master/main.js"></script>
 </head>
 <body>
 <main>
@@ -14,20 +14,20 @@
 <header>
 <div class="centermenu">
 <div id="menubtn" onclick="Showmenu()"></div>
-			<nav>
+<nav>
 						<ul id="DesktopM">
-			  <li class="logoM"><img src="logo.jpg" alt="company logo"></li>
-  <li class="menuitems"><a href="Index.html">Home</a></li>
-  <li class="menuitems"><a href="Blog.html">Blog</a></li>
-  <li class="menuitems"><a href="Emag.html">E-magazine</a></li>
-  <li class="menuitems"><a href="Storelocator.html">Our Stores</a></li>
+			  <li class="logoM"><img src="https://rawgit.com/AzulTop/progapi2/master/logo.jpg" alt="company logo"></li>
+  <li class="menuitems"><a href="https://rawgit.com/AzulTop/progapi2/master/Index.html">Home</a></li>
+  <li class="menuitems"><a href="https://rawgit.com/AzulTop/progapi2/master/Blog.html">Blog</a></li>
+  <li class="menuitems"><a href="https://rawgit.com/AzulTop/progapi2/master/Emag.html">E-magazine</a></li>
+  <li class="menuitems"><a href="https://rawgit.com/AzulTop/progapi2/master/Storelocator.html">Our Stores</a></li>
 </ul>
 			<ul id="Mmenu">
 			  <li class="logoM"><img src="logo.jpg" alt="company logo"></li>
-  <li class="menuitems"><a href="Index.html">Home</a></li>
-  <li class="menuitems"><a href="Blog.html">Blog</a></li>
-  <li class="menuitems"><a href="Emag.html">E-magazine</a></li>
-  <li class="menuitems"><a href="Storelocator.html">Our Stores</a></li>
+  <li class="menuitems"><a href="https://rawgit.com/AzulTop/progapi2/master/Index.html">Home</a></li>
+  <li class="menuitems"><a href="https://rawgit.com/AzulTop/progapi2/master/Blog.html">Blog</a></li>
+  <li class="menuitems"><a href="https://rawgit.com/AzulTop/progapi2/master/Emag.html">E-magazine</a></li>
+  <li class="menuitems"><a href="https://rawgit.com/AzulTop/progapi2/master/Storelocator.html">Our Stores</a></li>
 </ul>
 </nav>
 
@@ -40,7 +40,7 @@
 <li class="lextabs">Overview</li>
 </ul>
 
-<img id="PicM" src="2013_LEXMOTO_ARROW_125cc.jpg" alt="Sinnis_Retrostar_250cc_Motorcycle " >
+<img id="PicM" src="https://rawgit.com/AzulTop/progapi2/master/2013_LEXMOTO_ARROW_125cc.jpg" alt="Lexmoto 125cc_Motorcycle" >
 <div class="modeldesc">
 <h2>General</h2>
 The Lexmoto XTRS entered the range trying to fill the shoes of the fantastic Lexmoto XTR. Using our experience we added the CBB balance shaft engine to the model to smooth the riding experience for the rider. It has been unbeatable in terms of value ever since. Featuring a sleek desirable design and the efficient and reliable 4t motor the XTRS offers you so much bike for so little cost.
