--- a/Storelocator.html
+++ b/Storelocator.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Store Location</title>
-<link rel="stylesheet" type="text/css" href="style.css">
-<link rel="stylesheet" type="text/css" href="mobile.css">
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-<script src="main.js"></script>
+<title>Home Page</title>
+<link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/AzulTop/progapi2/master/styles.css">
+<link rel="stylesheet" type="text/css" href="https://rawgit.com/AzulTop/progapi2/master/mobile.css">
+<link rel="shortcut icon" href="https://rawgit.com/AzulTop/progapi2/master/favicon.ico" type="image/x-icon" />
+<script src="https://rawgit.com/AzulTop/progapi2/master/main.js"></script>
 </head>
 <body>
 <main>
@@ -16,18 +16,18 @@
 <div id="menubtn" onclick="Showmenu()"></div>
 			<nav>
 						<ul id="DesktopM">
-			  <li class="logoM"><img src="logo.jpg" alt="company logo"></li>
-  <li class="menuitems"><a href="Index.html">Home</a></li>
-  <li class="menuitems"><a href="Blog.html">Blog</a></li>
-  <li class="menuitems"><a href="Emag.html">E-magazine</a></li>
-  <li class="menuitems"><a href="Storelocator.html">Our Stores</a></li>
+			  <li class="logoM"><img src="https://rawgit.com/AzulTop/progapi2/master/logo.jpg" alt="company logo"></li>
+  <li class="menuitems"><a href="https://rawgit.com/AzulTop/progapi2/master/Index.html">Home</a></li>
+  <li class="menuitems"><a href="https://rawgit.com/AzulTop/progapi2/master/Blog.html">Blog</a></li>
+  <li class="menuitems"><a href="https://rawgit.com/AzulTop/progapi2/master/Emag.html">E-magazine</a></li>
+  <li class="menuitems"><a href="https://rawgit.com/AzulTop/progapi2/master/Storelocator.html">Our Stores</a></li>
 </ul>
 			<ul id="Mmenu">
 			  <li class="logoM"><img src="logo.jpg" alt="company logo"></li>
-  <li class="menuitems"><a href="Index.html">Home</a></li>
-  <li class="menuitems"><a href="Blog.html">Blog</a></li>
-  <li class="menuitems"><a href="Emag.html">E-magazine</a></li>
-  <li class="menuitems"><a href="Storelocator.html">Our Stores</a></li>
+  <li class="menuitems"><a href="https://rawgit.com/AzulTop/progapi2/master/Index.html">Home</a></li>
+  <li class="menuitems"><a href="https://rawgit.com/AzulTop/progapi2/master/Blog.html">Blog</a></li>
+  <li class="menuitems"><a href="https://rawgit.com/AzulTop/progapi2/master/Emag.html">E-magazine</a></li>
+  <li class="menuitems"><a href="https://rawgit.com/AzulTop/progapi2/master/Storelocator.html">Our Stores</a></li>
 </ul>
 </nav>
 
