--- a/Blog.html
+++ b/Blog.html
@@ -34,7 +34,7 @@
 </div>
 </header>
 <h1 class="MH1Text">These are our current best sellers</h1>
-<p class="PMText">Click on any of the following tiles learn more about the each motorcycle</p><button type="button" onclick="LoopMdata()">Click Me!</button>
+<p id="PMText">Click on any of the following tiles learn more about the each motorcycle</p><button type="button" onclick="LoopMdata()">Click Me!</button>
 <div id="TilePosition">
 <div class="box"><div class="MotoImg"><img  class="MotoPic" src="https://rawgit.com/AzulTop/progapi2/master/2013_LEXMOTO_ARROW_125cc.jpg" alt="2013_LEXMOTO_ARROW_125cc Motorcycle " height="105" width="150"></div><div class="Mtext"><p>Description</p><p class="productInfo">
 Condition:
