--- a/Blog.html
+++ b/Blog.html
@@ -6,9 +6,9 @@
 <link rel="stylesheet" type="text/css" href="https://rawgit.com/AzulTop/progapi2/master/styles.css">
 <link rel="stylesheet" type="text/css" href="https://rawgit.com/AzulTop/progapi2/master/mobile.css">
 <link rel="shortcut icon" href="https://rawgit.com/AzulTop/progapi2/master/favicon.ico" type="image/x-icon" />
-<script src="https://cdn.rawgit.com/AzulTop/progapi2/cb28c395/main.js"></script>
+<script src="https://cdn.rawgit.com/AzulTop/progapi2/eff10e57/main.js"></script>
 </head>
-<body>
+<body onload="Getparagraph()">
 <main>
 <header>
 <div class="centermenu">
