--- a/Emag.html
+++ b/Emag.html
@@ -8,7 +8,7 @@
 <link rel="shortcut icon" href="https://rawgit.com/AzulTop/progapi2/master/favicon.ico" type="image/x-icon" />
 <script src="https://rawgit.com/AzulTop/progapi2/master/main.js"></script>
 </head>
-<body>
+<body onload="load()">
 <main>
 
 <header>
