--- a/Storelocator.html
+++ b/Storelocator.html
@@ -35,7 +35,7 @@
 </div>
 </header>
 <div id="MapContent">
-<img src="https://openclipart.org/download/233062/CompassRose.svg" alt="compass image"id="compass" height="50" width="50">
+<img src="https://openclipart.org/download/233062/CompassRose.svg" onclick="GetPoS()" alt="compass image"id="compass" height="50" width="50">
 
 <div class="Stores">
 56 Lambert Rd, Uttoxeter, ST14 7QG
