--- a/Storelocator.html
+++ b/Storelocator.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
 <title>Home Page</title>
@@ -35,7 +35,7 @@
 </div>
 </header>
 <div id="MapContent">
-<img src="https://openclipart.org/download/233062/CompassRose.svg" onclick="GetPoS()" alt="compass image" id="compass" height="50" width="50">
+<img src="https://openclipart.org/download/233062/CompassRose.svg" onclick="GetPoS()" alt="Compass Geolocation" id="compass" height="50" width="50">
 
 <div class="Stores">
 56 Lambert Rd, Uttoxeter, ST14 7QG
