--- a/Emag.html
+++ b/Emag.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="theme-color" content="#E11F1F"/>	
 <meta charset="UTF-8">
 <title>E magazine</title>
 <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/AzulTop/progapi2/master/styles.css">
