--- a/Lexmoto2013.html
+++ b/Lexmoto2013.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="theme-color" content="#E11F1F"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">	
 <title>Home Page</title>
 <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/AzulTop/progapi2/master/styles.css">
 <link rel="stylesheet" type="text/css" href="https://rawgit.com/AzulTop/progapi2/master/mobile.css">
