--- a/Blog.html
+++ b/Blog.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta name="theme-color" content="#E11F1F"/>	
+<meta name="theme-color" content="#E11F1F"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">		
 <meta charset="UTF-8">
 <title>Home Page</title>
 <link rel="stylesheet" type="text/css" href="https://rawgit.com/AzulTop/progapi2/master/styles.css">
