--- a/Emag.html
+++ b/Emag.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="theme-color" content="#E11F1F"/>	
+<meta name="theme-color" content="#E11F1F"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">	
 <meta charset="UTF-8">
 <title>E magazine</title>
 <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/AzulTop/progapi2/master/styles.css">
