--- a/Emag.html
+++ b/Emag.html
@@ -54,7 +54,7 @@
 </div>
 <div class="Details">
 	<label for="phoneno">Phone No:</label>
-	<input type="number" min="11" name="PhoneNo" class="store" id="phoneno">
+	<input type="number" maxlength="11" name="PhoneNo" class="store" id="phoneno">
 </div>
 <br>
 <div class="NewsletterStyle">
