--- a/Lexmoto2013.html
+++ b/Lexmoto2013.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="theme-color" content="#E11F1F"/>
-<title>Home Page</title>
+<title>Lexmoto2013</title>
 <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/AzulTop/progapi2/master/styles.css">
 <link rel="stylesheet" type="text/css" href="https://rawgit.com/AzulTop/progapi2/master/mobile.css">
 <link rel="shortcut icon" href="https://rawgit.com/AzulTop/progapi2/master/favicon.ico" type="image/x-icon" />
