--- a/Blog.html
+++ b/Blog.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="theme-color" content="#E11F1F"/>	
 <meta charset="UTF-8">
-<title>Home Page</title>
+<title>Blog</title>
 <link rel="stylesheet" type="text/css" href="https://rawgit.com/AzulTop/progapi2/master/styles.css">
 <link rel="stylesheet" type="text/css" href="https://rawgit.com/AzulTop/progapi2/master/mobile.css">
 <link rel="shortcut icon" href="https://rawgit.com/AzulTop/progapi2/master/favicon.ico" type="image/x-icon" />
