--- a/Index.html
+++ b/Index.html
@@ -38,8 +38,14 @@
 <img id="Honda15" src="https://rawgit.com/AzulTop/progapi2/master/2015-Honda-CBR300R2_1X.jpg" alt="This is the Honda CBR300R2 " srcset="https://rawgit.com/AzulTop/progapi2/master/2015-Honda-CBR300R2_1X.jpg 1x, https://rawgit.com/AzulTop/progapi2/master/2015-Honda-CBR300R2_2X.jpg 2x, https://rawgit.com/AzulTop/progapi2/master/2015-Honda-CBR300R2_3X.jpg 3x">
 <div id="Phototext">
 <h1>2015 Honda CBR300R</h1>
-<p>The CBR300R has something very special – a shot of DNA and style drawn straight from the incredible CBR1000RR Fireblade. Its power delivery is razor sharp and as you chase down those corners you'll feel directly connected. Standard-fit Anti-Lock Braking System (ABS) adds extra braking confidence as you ride.</p>
-<p>While one might be tempted to think the Honda CBR300R is just for beginners, girls, or seasoned riders who are backing it down, it’s quite a bit more than that. The fact is, the CBR 300 is a great commuter bike, it’s a blast in the canyons, and it easily works as a no-stress around-town or errand bike. Let’s see why this diminutive bike works so well. This Motorcycle is avaible in our Newcastle Branch</p>
+<p>The CBR300R has something very special – a shot of DNA and style drawn straight from the incredible CBR1000RR Fireblade.
+Its power delivery is razor sharp and as you chase down those corners you'll feel directly connected. Standard-fit 
+Anti-Lock Braking System (ABS) adds extra braking confidence as you ride.</p>
+<p>While one might be tempted to think the Honda CBR300R is just for beginners, 
+girls, or seasoned riders who are backing it down, it’s quite a bit more than that. 
+The fact is, the CBR 300 is a great commuter bike, it’s a blast in the canyons, 
+and it easily works as a no-stress around-town or errand bike. 
+Let’s see why this diminutive bike works so well. This Motorcycle is avaible in our Newcastle Branch</p>
 </div>
 </main>
 </body>
