--- a/Emag.html
+++ b/Emag.html
@@ -93,7 +93,7 @@
 </tr>
 </table>
 <br>
-    <input type="submit" value="Subscribe" onclick="cleardata()" id="submit">
+    <input type="submit" value="Subscribe" id="submit">
 </form>
 </div>
 
